fix treeitem margin collapsing

--- a/MduiBlazor/wwwroot/css/mdui.css
+++ b/MduiBlazor/wwwroot/css/mdui.css
@@ -8558,8 +8558,6 @@ th.mdui-table-cell-checkbox .mdui-checkbox {
 }
 .mdui-picker-dense .mdui-picker-item {
   height: 36px;
-  margin-top: 0;
-  margin-bottom: 0;
   line-height: 36px;
 }
 .mdui-picker-top .mdui-picker-content {
@@ -8587,17 +8585,11 @@ th.mdui-table-cell-checkbox .mdui-checkbox {
 /* 内容项 */
 .mdui-picker-item {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   height: 48px;
-  margin: 4px;
+  margin: 2px;
   padding: 0 16px;
   color: inherit;
   line-height: 48px;
@@ -8630,6 +8622,9 @@ th.mdui-table-cell-checkbox .mdui-checkbox {
 .mdui-picker-item .mdui-checkbox .mdui-checkbox-icon {
   -webkit-box-shadow: none !important;
           box-shadow: none !important;
+}
+.mdui-picker-item + .mdui-picker-item {
+  margin-top: 4px;
 }
 .mdui-tree-picker .mdui-picker-item {
   margin-left: 36px;
@@ -13919,6 +13914,8 @@ input.mdui-btn[type="submit"] {
           align-items: center;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  margin-top: 2px;
+  margin-bottom: 2px;
   margin-left: 36px;
   text-decoration: none;
   cursor: pointer;
@@ -13944,6 +13941,9 @@ input.mdui-btn[type="submit"] {
 }
 .mdui-treeview-item:has(.mdui-collapse-arrow) {
   margin-left: 0;
+}
+.mdui-treeview-item + .mdui-treeview-item {
+  margin-top: 4px;
 }
 /* 组件项文本内容 */
 .mdui-treeview-item-content {
